# ml-life-killer

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  main.rs
client/src/renderer/: mod.rs
client/src/renderer/renderthing/: frame.rs  mod.rs  sleeper.rs  window.rs
client/src/ticker/: ml.rs  mod.rs  nature.rs
libgame/: Cargo.toml
libgame/src/: board.rs  lib.rs  pos.rs  rule.rs
libml/: Cargo.toml
libml/src/: lib.rs
libml/src/game/: kernel.rs  mod.rs  networksave.rs
libml/src/network/: functions.rs  harness.rs  mod.rs  node.rs
libml/src/network/layer/: compute.rs  input.rs  mod.rs
ml/: Cargo.toml
ml/networks/: 20250306_sin_2096  20250306_sin_69  20250306_tanh_3573  20250308_tanh_3x3_192
ml/src/: main.rs  savedata.rs  trainer.rs
ml/src/game/: kernel.rs  mod.rs  player.rs
ml/src/network/: mod.rs
ml/src/network/layer/: input.rs  mod.rs
ml/src/player/: kernel.rs  mod.rs
ml/src/trainer/: adapter.rs  mod.rs
mltrainer/: .gitignore  Cargo.toml
mltrainer/src/: main.rs  savedata.rs
mltrainer/src/adapter/: game.rs  mod.rs
mltrainer/src/trainer/: mod.rs
netdump/: Cargo.toml
netdump/src/: main.rs
trainer/: .gitignore  Cargo.toml
trainer/src/: main.rs
trainer/src/adapter/: game.rs  mod.rs
trainer/src/trainer/: mod.rs  mutation.rs
