[package]
name = "libml"
version = "0.1.0"
edition = "2024"

[dependencies]
slotmap = { version = "1.0", features = ["serde"] }
rand = "0.9"
itertools = "0.14"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
base64 = "0.22"

libgame = { path = "../libgame" }
