[package]
name = "ml"
version = "0.1.0"
edition = "2024"

[dependencies]
slotmap = { version = "1.0", features = ["serde"] }
rand = "0.9"
itertools = "0.14"
rayon = "1.10"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"
base64 = "0.22"


libgame = { path = "../libgame" }
